# OCR-Aster-ConvNeXt-Trainer

./: .gitignore  README.md  pyproject.toml
configs/datasets/: iiit5k.yaml
configs/training/: aster_v2_curriculum.yaml  aster_v2_iiit5k.yaml
ocr_aster/config/: loader.py  schema.py
ocr_aster/data/: augmentation.py  collate.py  consumer.py  dataset.py  publisher.py  run_publisher.py
ocr_aster/model/: attention.py  convnext.py  decoder.py  encoder.py  model.py
ocr_aster/monitoring/: tracker.py
ocr_aster/train/: forward_pass.py  metrics.py  run.py  train.py  utils.py  validation.py  validation_logger.py
scripts/: start_all.bat  start_all.sh  start_publisher.bat  start_training.bat
tests/: test_augmentation.py  test_collate.py  test_config.py  test_consumer.py  test_convnext.py  test_decoder.py  test_encoder.py  test_forward_pass.py  test_label_converter.py  test_metrics.py  test_model.py  test_publisher.py  test_tracker.py
