[project]
name = "ocr-aster"
version = "0.1.0"
description = "ConvNeXt + BiLSTM + ASTER v2 attention OCR trainer on HuggingFace Datasets"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "datasets>=2.19.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "albumentations>=1.4.0",
    "straug>=0.1.2",
    "editdistance>=0.8.1",
    "Pillow>=10.0.0",
    "mlflow>=2.13.0",
    "numpy>=1.26.0",
]

[project.scripts]
ocr-train = "ocr_aster.train.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["ocr_aster"]
